Thoth History
================================================================================

Version 0.1.3 (?)
  * Individual blog posts provide Atom feeds for recent comments.
  * Blog posts are marked up using the hAtom microformat.
  * Thoth auto-generates an XML sitemap at http://yourblog.com/sitemap (set
    site.enable_sitemap to false to disable).
  * Comment URLs are built using the name of the post the comment is attached to
    rather than the id.
  * Fixed a bug that prevented Atom and RSS feeds from being cached when
    server-side caching was enabled.
  * Fixed entry titles in Atom feeds claiming to be type="html" when in fact
    they weren't.

Version 0.1.2 (2008-03-22)
  * Added MinifyController to minify JavaScript and CSS on the fly.
  * Bumped Ramaze dependency to 0.3.9.1 to chase some important bug fixes.

Version 0.1.1 (2008-03-17)
  * First release.