@@ -1,4 +1,4 @@
-<h2>Posts with the tag '<%= h(@tag.name) %>'</h2>
+<h2>Posts tagged with "<%= h(@tag.name) %>"</h2>
 
 <div class="search">
   <p>
