@@ -2,7 +2,8 @@ Thoth History
 ================================================================================
 
 Version 0.1.3 (?)
-  * Individual blog posts provide Atom feeds for recent comments.
+  * Blog posts provide Atom feeds for recent comments.
+  * Tag pages provide Atom feeds for posts with that tag.
   * Blog posts are marked up using the hAtom microformat.
   * Thoth auto-generates an XML sitemap at http://yourblog.com/sitemap (set
     site.enable_sitemap to false to disable).
